@@ -715,6 +715,7 @@ CONFIG_PPP=m
 # CONFIG_PPP_BSDCOMP is not set
 CONFIG_PPP_MPPE=m
 CONFIG_PPPOE=m
+CONFIG_PPPOE_FASTPATH=y
 CONFIG_PPPOL2TP=m
 CONFIG_PPPOL2TP_FASTPATH=y
 CONFIG_PPTP=m
