@@ -336,7 +336,8 @@
 20) Rework build system.<br>
 21) Add L2TP fastpath. (~20% speedup of old revision and more 10% of acell-pptp).<br>
 22) Add wan_manual_mtu variable 0/value default 0=auto,get from dhcp server. (Neen add in WebUI WAN setup).<br>
-23) Add vpnPurePPPOE variable 0/1 default 0=full WAN+PPPOE mode. (Need add in WebUI VPN/PPPOE setup.)<br>
+23) Add vpnPurePPPOE variable 0/1 default 0=full WAN+PPPOE mode. (Need add in WebUI VPN/PPPOE setup).<br>
+24) Initial PPPOE Fastpath for mem and cpu save.<br>
 
 <br><br>
 <b>For support see:</b><br>
